==> LiteOS/LiteOS_Lab/targets/STM32L431VCT6_Bossay/Hardware/LCD/lcd.c <==
#include "lcd.h"
#include "font.h"
#include "spi.h"
#include "gpio.h"
#include "dwt.h"
#include "stm32l4xx_hal.h"
#define LCD_TOTAL_BUF_SIZE	(240*240*2)
#define LCD_Buf_Size 1152

static void LCD_Gpio_Init(void)
{
   GPIO_InitTypeDef GPIO_InitStruct;

    __HAL_RCC_GPIOA_CLK_ENABLE();
    __HAL_RCC_GPIOD_CLK_ENABLE();
    __HAL_RCC_GPIOE_CLK_ENABLE();

    /*
	LCD_PWR:	PD10
	LCD_RST:	PD9
	LCD_DC:		PD8	
    */
    GPIO_InitStruct.Pin = GPIO_PIN_10;
    GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
    GPIO_InitStruct.Pull = GPIO_PULLUP;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
    HAL_GPIO_Init(GPIOD, &GPIO_InitStruct);
    HAL_GPIO_WritePin(GPIOD, GPIO_PIN_10, GPIO_PIN_RESET);
	
	GPIO_InitStruct.Pin = GPIO_PIN_9 | GPIO_PIN_8;
    GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
    GPIO_InitStruct.Pull = GPIO_PULLUP;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
    HAL_GPIO_Init(GPIOD, &GPIO_InitStruct);
    HAL_GPIO_WritePin(GPIOD ,GPIO_PIN_9 | GPIO_PIN_8, GPIO_PIN_RESET);



    LCD_PWR(0);

    LCD_RST(0);
    delay10ms(12);
    LCD_RST(1);

    MX_SPI1_Init();	//初始化SPI1接口
}
